# aqua

./: .env.example  .gitignore  agent.py  langgraph.json  main.py  playground.py  pyproject.toml  readme.md  requirements.txt  states.py
agents/: market_agent.py  performance_agent.py  risk_agent.py  strategy_agent.py
app/: graph.py  states.py
app/conditions/: strategy_condition.py
app/config/: llm_config.py  strategy_config.py
app/evm/: strategy.py
app/jobs/: market_job.py  strategy_job.py
app/nodes/: deploy_node.py  market_node.py  performance_node.py  reviewer_node.py  risk_node.py  strategy_node.py
app/prompts/: performance_prompts.py  risk_prompts.py  strategy_prompts.py
app/providers/: defi_llama_provider.py
app/rules/: supervisor_rules.py
app/services/: market_service.py  performance_service.py
config/: min_deposits.py  protocols_config.py
evm/: addresses.py
jobs/: market_job.py
providers/: defi_llama_provider.py
providers/types/: common.py  llama_types.py  market_types.py
rules/: supervisor_rules.py
services/: market_service.py  performance_service.py
src/: graph.py  schedule.py
src/agents/: market_agent.py  performance_agent.py  risk_agent.py  strategy_agent.py
src/config/: addresses_config.py  tokens_config.py
src/evm/: client.py  strategy.py
src/jobs/: market_job.py  strategy_job.py
src/nodes/: deploy_node.py  market_node.py  performance_node.py  reviewer_node.py  risk_node.py  strategy_node.py
src/prompts/: base_prompts.py  market_prompts.py
utils/: api_client.py  helpers.py  pinecone_client.py
(+13 files in other folders)
