[project]
name = "aqua"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "eth-account>=0.13.4",
    "eth-typing>=5.1.0",
    "langchain>=0.3.16",
    "langchain-community>=0.3.16",
    "langchain-core>=0.3.32",
    "langchain-openai>=0.3.2",
    "langchain-pinecone>=0.2.2",
    "langgraph>=0.2.68",
    "pinecone>=5.4.2",
    "pinecone-client>=4.1.2",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "web3>=7.7.0",
]
